RTE alignment fix (#631)
* Switch to HEX colors for consistency

* Fix alignment of text in RTE

* Revert "Switch to HEX colors for consistency"

This reverts commit 62e7b114f494965f1877a36bd33a74bf29310b54.

* Update packages/rich-text-editor/src/components/RichTextEditor/style.scss

* Update packages/rich-text-editor/src/utils/getBlockStyle.ts

--- a/packages/rich-text-editor/src/components/RichTextEditor/style.scss
+++ b/packages/rich-text-editor/src/components/RichTextEditor/style.scss
@@ -19,6 +19,17 @@
 		}
 	}
 
+	$text-alignments: right, left, center, justify;
+
+	@each $text-alignment in $text-alignments {
+		&--align-#{$text-alignment} {
+			text-align: $text-alignment;
+			& > div {
+				display: inline-block;
+			}
+		}
+	}
+
 	&__toolbar {
 		border: none;
 		border-bottom: 3px solid rgba(192, 192, 192, 0.5);
